--- a/exerpg20.html
+++ b/exerpg20.html
@@ -29,7 +29,7 @@
         </article>
         <div>
             <p>
-            <a link href="indexexercss.html">Índice</a></p>
+            <a link href="indexexercss.html">Índice testando</a></p>
         </div>
         <foooter>Copyright &copy; 2022 Jean Ricardo Vitório</foooter>
     </body>
