--- a/exerpg34.html
+++ b/exerpg34.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1>Empresa de Design Acme</h1>
+            <h1>Empresa de Design Acme.</h1>
         </header>
 
         <article>
