--- a/indexexercss.html
+++ b/indexexercss.html
@@ -19,7 +19,7 @@
                 <li><a link href="exerpg34.html">Exercício 3</li></a>
                 <p>Aprofundando conceito de seletor de classe (class)</p>
                 <li><a link href="exerpg38.html">Exercício 4</li></a>
-                <p>Aprofundando conceito de seletor de classe (class)Testando</p>
+                <p>Aprofundando conceito de seletor de classe (class)</p>
             </ul>
         </body>
 </html>
