--- a/exerpg20.html
+++ b/exerpg20.html
@@ -5,31 +5,31 @@
     <head>
         <meta charset="pt-br"> 
         <link rel="stylesheet" href="estilo1.css">   
-        <title>Design Acme</title>
+        <title>Design Acme.</title>
     </head>
 
     <body>
         <header>
-            <h1>Empresa de Design Acme</h1>
+            <h1>Empresa de Design Acme.</h1>
         </header>
 
         <article>
-            <h2>Novas mídias e novo design</h2>
-            <p>A Design Acme está habilitada para construir a página da sua empresa e garantir sua presença na web</br>
+            <h2>Novas mídias e novo design.</h2>
+            <p>A Design Acme está habilitada para construir a página da sua empresa e garantir sua presença na web.</br>
             Nós oferecemos os seguintes serviços:</p>
             <ul>
-                <li>Desenvolvimento de Websites</li>
-                <li>Animação Interativa</li>
-                <li>Soluções de E-Commerce</li>
-                <li>Estudos de Usabilidade</li>
-                <li>Otimização de Máquinas de Buscas</li>
+                <li>Desenvolvimento de Websites.</li>
+                <li>Animação Interativa.</li>
+                <li>Soluções de E-Commerce.</li>
+                <li>Estudos de Usabilidade.</li>
+                <li>Otimização de Máquinas de Buscas.</li>
             </ul>
-            <h2>Atendendo às suas necessidades de negócios</h2>
+            <h2>Atendendo às suas necessidades de negócios.</h2>
             <p>Nossos designers especializados são criativos e prontos para trabalhar com você</br>Aproveite o crescimento da web!</p>
         </article>
         <div>
             <p>
-            <a link href="indexexercss.html">Índice testando</a></p>
+            <a link href="indexexercss.html">Índice.</a></p>
         </div>
         <foooter>Copyright &copy; 2022 Jean Ricardo Vitório</foooter>
     </body>
