--- a/exerpg29.html
+++ b/exerpg29.html
@@ -10,11 +10,11 @@
 
     <body>
         <header>
-            <h1>Empresa de Design Acme</h1>
+            <h1>Empresa de Design Acme.</h1>
         </header>
 
         <article>
-            <h2>Novas mídias e novo design</h2>
+            <h2>Novas mídias e novo design.</h2>
             <p>A Design Acme está habilitada para construir a página da sua empresa e garantir sua presença na web</br>
             Nós oferecemos os seguintes serviços:</p>
             <ul>
