--- a/exerpg34.html
+++ b/exerpg34.html
@@ -14,8 +14,8 @@
         </header>
 
         <article>
-            <h2>Novas mídias e novo design</h2>
-            <p>A Design Acme está habilitada para construir a página da sua empresa e garantir sua presença na web</br>
+            <h2>Novas mídias e novo design.</h2>
+            <p>A Design Acme está habilitada para construir a página da sua empresa e garantir sua presença na web.</br>
             Nós oferecemos os seguintes serviços:</p>
             <ul>
                 <li>Desenvolvimento de Websites</li>
