--- a/indexexercss.html
+++ b/indexexercss.html
@@ -3,23 +3,27 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="estiloindex.css">
         <title>Índice</title>
     </head>
         <header>
-            Links para os exercícios da Apostila IOS.
-            Assunto:CSS
+            <h1>Links para os exercícios da Apostila IOS.</h1>
+            <h2>Assunto:CSS</h2>
         </header>
         <body>
             <ul>
                 
-                <li><a link href="exerpg20.html">Exercício 1</li></a>
-                <p>Nesse exercício, inicia o processo de estilização com CSS</p>
-                <li><a link href="exerpg29.html">Exercício 2</li></a>
-                <p>Inserindo seletor de classe. (class)</p>
-                <li><a link href="exerpg34.html">Exercício 3</li></a>
-                <p>Aprofundando conceito de seletor de classe (class)</p>
-                <li><a link href="exerpg38.html">Exercício 4</li></a>
-                <p>Aprofundando conceito de seletor de classe (class)</p>
+                <li class="links">
+                    <a link href="exerpg20.html">Exercício 1</li></a>
+                    <p class="links">Nesse exercício, inicia o processo de estilização com CSS</p>
+                <li class="links"><a link href="exerpg29.html">Exercício 2</li></a>
+                    <p class="links">Inserindo seletor de classe. (class)</p>
+                <li class="links"><a link href="exerpg34.html">Exercício 3</li></a>
+                    <p class="links">Aprofundando conceito de seletor de classe (class)</p>
+                <li class="links"><a link href="exerpg38.html">Exercício 4</li></a>
+                    <p class="links">Aprofundando conceito de seletor de classe (class)</p>
+                <li class="links"><a link href="exerpg41.html">Exercício 5</li></a>
+                    <p class="links">Aprofundando conceito de seletor de classe (class)</p>
             </ul>
         </body>
 </html>
