Aperfeiçoamento da página inicial e alguns exercícios, e inclusão de novo exercício

--- a/exerpg20.html
+++ b/exerpg20.html
@@ -12,7 +12,11 @@
         <header>
             <h1>Empresa de Design Acme.</h1>
         </header>
-
+        <div>
+            <nav>
+                <p><a link href="indexexercss.html">Home.</a></p>
+            </nav>
+        </div>
         <article>
             <h2>Novas mídias e novo design.</h2>
             <p>A Design Acme está habilitada para construir a página da sua empresa e garantir sua presença na web.</br>
@@ -27,10 +31,7 @@
             <h2>Atendendo às suas necessidades de negócios.</h2>
             <p>Nossos designers especializados são criativos e prontos para trabalhar com você</br>Aproveite o crescimento da web!</p>
         </article>
-        <div>
-            <p>
-            <a link href="indexexercss.html">Índice.</a></p>
-        </div>
+        
         <foooter>Copyright &copy; 2022 Jean Ricardo Vitório</foooter>
     </body>
 </html>
