--- a/exerpg38.html
+++ b/exerpg38.html
@@ -12,15 +12,17 @@
         <header>
             <h1>Empresa de Design Acme</h1>
         </header>
+        <div>
+            <nav>
+                <p><a link href="indexexercss.html">Home</a></p>
+            </nav>
+        </div>
         <article>
             <h2>Equipe:</h2>
             <p id="primeiro-nome">Charlie</p>
             <p id="sobrenome">Brown</p>
         </article>
-        <div>
-            
-            <a link href="indexexercss.html">Índice</a>
-        </div>
+        
         <footer>Copyright&copy; 2022 Jean Ricardo Vitório</footer>
     </body>
 </html>
