--- a/exerpg41.html
+++ b/exerpg41.html
@@ -12,6 +12,11 @@
     <header>
         <h1>Empresa de Design Acme.</h1>
     </header>
+    <div>
+        <nav>
+            <p><a link href="indexexercss.html">Home</a></p>
+        </nav>
+    </div>
     <article>
         <p>Exemplo de parágrafo</p>
     
