--- a/exerpg29.html
+++ b/exerpg29.html
@@ -12,6 +12,11 @@
         <header>
             <h1>Empresa de Design Acme.</h1>
         </header>
+        <div>
+            <nav>
+                <p><a link href="indexexercss.html">Home</a></p>
+            </nav>
+        </div>
 
         <article>
             <h2>Novas mídias e novo design.</h2>
@@ -27,10 +32,7 @@
             <h2>Atendendo às suas necessidades de negócios</h2>
             <p>Nossos designers especializados são criativos e prontos para trabalhar com você</br>Aproveite o crescimento da web!</p>
         </article>
-        <div>
-            <p>
-            <a link href="indexexercss.html">Índice</a></p>
-        </div>
+        
         <foooter>Copyright &copy; 2022 Jean Ricardo Vitório</foooter>
     </body>
 </html>
