--- a/exerpg34.html
+++ b/exerpg34.html
@@ -12,6 +12,11 @@
         <header>
             <h1>Empresa de Design Acme.</h1>
         </header>
+        <div>
+            <nav>
+                <p><a link href="indexexercss.html">Home</a></p>
+            </nav>
+        </div>
 
         <article>
             <h2>Novas mídias e novo design.</h2>
@@ -28,10 +33,7 @@
             <p class="fundo cor-texto"> Criar um site possibilita que sua empresa tenha maior credibilidade perante o seu público-alvo, garantindoque os clientes notem o seu esforço em possuir um relacionamento no ambiente virtual.</p> 
             <p>Nossos designers especializados são criativos e prontos para trabalhar com você</br>Aproveite o crescimento da web!</p>
         </article>
-        <div>
-            
-            <a link href="indexexercss.html">Índice</a>
-        </div>
+        
         <foooter>Copyright &copy; 2022 Jean Ricardo Vitório</foooter>
     </body>
 </html>
