--- a/indexexercss.html
+++ b/indexexercss.html
@@ -43,24 +43,45 @@
                 </div>
                 
                 <div class="links">
-                <li>
-                    <h2><a link href="exerpg38.html">Exercício 4</a></h2>
-                </li>
-                    <p>Aprofundando conceito de seletor de classe (class)</p>
+                    <li>
+                        <h2><a link href="exerpg38.html">Exercício 4</a></h2>
+                    </li>
+                        <p>Aprofundando conceito de seletor de classe (class)</p>
                 </div>
                 
                 <div class="links">
-                <li>
-                    <h2><a link href="exerpg41.html">Exercício 5</a></h2>
-                </li>
+                    <li>
+                        <h2><a link href="exerpg41.html">Exercício 5</a></h2>
+                    </li>
+                        <p>Aprofundando conceito de seletor de classe (class)</p>
+                    </div>
+
+                <div class="links">
+                    <li>
+                        <h2><a link href="exerpg43.html">Exercício 6</a></h2>
+                    </li>
                     <p>Aprofundando conceito de seletor de classe (class)</p>
                 </div>
 
                 <div class="links">
-                <li>
-                    <h2><a link href="exerpg43.html">Exercício 6</a></h2>
-                </li>
-                <p>Aprofundando conceito de seletor de classe (class)</p>
+                    <li>
+                        <h2><a link href="exerpg47.html">Exercício 7</a></h2>
+                    </li>
+                    <p>Aprofundando conceito de seletor de classe (class)</p>
+                </div>
+
+                <div class="links">
+                    <li>
+                        <h2><a link href="exerpg52.html">Exercício 8</a></h2>
+                    </li>
+                    <p>Aprofundando conceito de seletor de classe (class)</p>
+                </div>
+
+                <div class="links">
+                    <li>
+                        <h2><a link href="exerpg57.html">Exercício 9</a></h2>
+                    </li>
+                    <p>Aprofundando conceito de seletor de classe (class)</p>
                 </div>
             </ul>
         </body>
