--- a/indexexercss.html
+++ b/indexexercss.html
@@ -83,6 +83,20 @@
                     </li>
                     <p>Aprofundando conceito de seletor de classe (class)</p>
                 </div>
+
+                <div class="links">
+                    <li>
+                        <h2><a link href="exerpg65.html">Exercício 10</a></h2>
+                    </li>
+                    <p>Aprofundando conceito de seletor de classe (class)</p>
+                </div>
+
+                <div class="links">
+                    <li>
+                        <h2><a link href="exerpg74.html">Exercício 11</a></h2>
+                    </li>
+                    <p>Aprofundando conceito de seletor de classe (class)</p>
+                </div>
             </ul>
         </body>
 
