--- a/cap3.html
+++ b/cap3.html
@@ -11,6 +11,11 @@
     </head>
 
     <header>
+        <div>
+            <nav>
+                <p><a link href="index2.html">Home</a></p>
+            </nav>
+        </div>
         <h1>Lista de exercícios</h1><h1><img src="livro.png"></h1>
         
     </header>
@@ -18,10 +23,17 @@
     <body>
         <section class="container">
             <div class="item item-1">
-                <h2><a href="exerpg34.html">Exercícios das paginas 20 e 29</a></h2>
+                <h2><a href="exerpg34.html">Exercícios das paginas 34</a></h2>
                 <p>Seletor de classe (class selector)</p>
                 <p>Classe em um elemento HTML</p>
                 <p>Aplicando mais de uma classe em um único elemento</p>
                 <p>Aplicando mais de uma classe em um único elemento</p>
+            </div>
+        </section>
+        <div>
+            <nav>
+                <p><a link href="index2.html">Home</a></p>
+            </nav>
+        </div>
     </body>
 </html>
