--- a/exerpg113.html
+++ b/exerpg113.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="estilo17.css">
     <title>CSS3 Site responsivo de tabela de preços</title>
 </head>
+    <div>
+        <nav>
+            <p><a link href="index2.html">Home</a></p>
+        </nav>
+    </div>
 
 <body>
     
