--- a/exerpg41.html
+++ b/exerpg41.html
@@ -14,7 +14,7 @@
     </header>
     <div>
         <nav>
-            <p><a link href="indexexercss.html">Home</a></p>
+            <p><a link href="index2.html">Home</a></p>
         </nav>
     </div>
     <article>
