--- a/exerpg52.html
+++ b/exerpg52.html
@@ -13,13 +13,13 @@
     </header>
     <div>
         <nav>
-            <p><a link href="indexexercss.html">Home.</a></p>
+            <p><a link href="index2.html">Home</a></p>
         </nav>
     </div>
+    
     <article>
         <figure>
-            <img src="
-            myisland.jpg" alt="Imagem de uma ilha tropical">
+            <img src="myisland.jpg" alt="Imagem de uma ilha tropical">
             <figcaption>Ilha Tropical</figcaption>
         </figure>
     </article>
