--- a/exerpg99.html
+++ b/exerpg99.html
@@ -17,7 +17,7 @@
     </head>
     <div>
         <nav>
-            <a link href="indexexercss.html">Home</a>
+            <a link href="index2.html">Home</a>
         </nav>
     </div>
 
