--- a/exerpg132.html
+++ b/exerpg132.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="estilo18.css">
     <title>Flexbox</title>
 </head>
-
+<div>
+    <nav>
+        <p><a link href="index2.html">Home</a></p>
+    </nav>
+</div>
 <body>
     <section class="container">
         <div class="item-box-1">
