--- a/exerpg47.html
+++ b/exerpg47.html
@@ -12,27 +12,28 @@
         <header>
             <h1>Empresa de design Acme</h1>
         </header>
-    <nav>
-        <a href="exerpg47.html">Home</a>
-        <a href="exerpg47p2.html">Serviços</a>
-    </nav>
-    <main>
-        <article>
-            <h2>Novas mídias e novo design</h2>
-            <p> a <span class="company">Design Acme </span>está habilitada para construir a página da sua empresa e garantir sua presença na web</p>
-            <p>Nós oferecemos os seguintes serviços</p>
-            <ul>
-                <li>Desenvolvimento de Websites</li>
-                <li>Animação Interativa</li>
-                <li>Soluções de E-commerce</li>
-                <li class="feature">Estudos de usabilidade</li>
-                <li class="feature">Otimizaçao de máquinas de buscas</li>
-            </ul>
-            <h2>Atendendo às suas necessidades de negócios</h2>
-            <p>Nossos designers especializados são criativos e prontos para trabalhar com você.</p>
-            <p>Aproveite o crescimento na Web!</p>
-        </article>
-    </main>
+            <nav>
+                <a link href="index2.html">Home</a>
+                <a href="exerpg47.html">Home</a>
+                <a href="exerpg47p2.html">Serviços</a>
+            </nav>
+        <main>
+            <article>
+                <h2>Novas mídias e novo design</h2>
+                <p> a <span class="company">Design Acme </span>está habilitada para construir a página da sua empresa e garantir sua presença na web</p>
+                <p>Nós oferecemos os seguintes serviços</p>
+                <ul>
+                    <li>Desenvolvimento de Websites</li>
+                    <li>Animação Interativa</li>
+                    <li>Soluções de E-commerce</li>
+                    <li class="feature">Estudos de usabilidade</li>
+                    <li class="feature">Otimizaçao de máquinas de buscas</li>
+                </ul>
+                <h2>Atendendo às suas necessidades de negócios</h2>
+                <p>Nossos designers especializados são criativos e prontos para trabalhar com você.</p>
+                <p>Aproveite o crescimento na Web!</p>
+            </article>
+        </main>
     <footer>Copyright &copy; 2021 - Jean Ricardo Vitório</footer>
     </body>
 </html>
