--- a/exerpg47p2.html
+++ b/exerpg47p2.html
@@ -12,44 +12,45 @@
         <header>
             <h1>Empresa de design Acme</h1>
         </header>
-    <nav>
-        <a href="exerpg47.html">Home</a>
-        <a href="exerpg47p2.html">Serviços</a>
-    </nav>
-    <main>
-        <article>
-            <h2>Nossos serviços encontram a necessidade do seu negócio</h2>
-        </article>
-        <dl>
-            <dt>
-            <strong>Desenvolvimento de Website</strong>
-            </dt>
-            <dd> Se suas necessidades são grandes ou pequenas, a Acme pode colocar sua 
-           empresa na Web! </dd>
-            <dt>
-            <strong>Animação Interativa</strong>
-            </dt>
-            <dd>Treinamentos multimídia e animações de marketing são nossa 
-           especialidade.</dd>
-            <dt>
-            <strong>Soluções de E-Commerce</strong>
-            </dt>
-            <dd> A Acme oferece entrada rápida e fácil no mercado de comércio 
-           eletrônico.</dd>
-            <dt>
-            <strong>Estudos de Usabilidade</strong>
-            </dt>
-            <dd>A Acme pode avaliar a usabilidade do seu site atual e sugerir 
-           melhorias.</dd>
-            <dt>
-            <strong>Otimização das ferramentas de busca por site na 
-           Internet</strong>
-            </dt>
-            <dd>A maioria das pessoas encontra sites usando mecanismos de pesquisa. A 
-           Acme pode juda-lo a divulgar seu
-            site.</dd>
-            </dl>
-    </main>
+            <nav>
+                <a link href="index2.html">Home</a>
+                <a href="exerpg47.html">Parte 1</a>
+                <a href="exerpg47p2.html">Parte 2</a>
+            </nav>
+        <main>
+            <article>
+                <h2>Nossos serviços encontram a necessidade do seu negócio</h2>
+            </article>
+            <dl>
+                <dt>
+                <strong>Desenvolvimento de Website</strong>
+                </dt>
+                <dd> Se suas necessidades são grandes ou pequenas, a Acme pode colocar sua 
+            empresa na Web! </dd>
+                <dt>
+                <strong>Animação Interativa</strong>
+                </dt>
+                <dd>Treinamentos multimídia e animações de marketing são nossa 
+            especialidade.</dd>
+                <dt>
+                <strong>Soluções de E-Commerce</strong>
+                </dt>
+                <dd> A Acme oferece entrada rápida e fácil no mercado de comércio 
+            eletrônico.</dd>
+                <dt>
+                <strong>Estudos de Usabilidade</strong>
+                </dt>
+                <dd>A Acme pode avaliar a usabilidade do seu site atual e sugerir 
+            melhorias.</dd>
+                <dt>
+                <strong>Otimização das ferramentas de busca por site na 
+            Internet</strong>
+                </dt>
+                <dd>A maioria das pessoas encontra sites usando mecanismos de pesquisa. A 
+            Acme pode juda-lo a divulgar seu
+                site.</dd>
+                </dl>
+        </main>
     <footer>Copyright &copy; 2021 - Jean Ricardo Vitório</footer>
     </body>
 </html>
