--- a/exerpg98.html
+++ b/exerpg98.html
@@ -13,7 +13,7 @@
     </head>
     <div>
         <nav>
-            <p><a link href="indexexercss.html">Home</a></p>
+            <p><a link href="index2.html">Home</a></p>
         </nav>
     </div>
 
